--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<h1><%= @department.name %> - <%= @item.name %></h1>
+<p><%= @item.description %></p>
+<p><%= @item.style %></p>
+<p><%= @item.price %></p>
+<%= link_to 'Edit Item', edit_department_item_path([@department, @item]) %>
+<%= link_to 'Delete Item', [@department, @item], method: :delete %>
+<%= link_to 'Back To Items', department_items_path(@department) %>
